# ShamirSecretSharing

./: .travis.yml  LICENSE  README.rst
ShamirSecretSharing/: MInt.py  __init__.py  core.py  reconstruct_secret.py  split_secret.py  splitter.py
c/: CMakeLists.txt  build.sh
c/src/: shamir.c  shamir.h
c/tests/: test1.c  test2.c
python/: setup.py
python/ShamirSecretSharing/: core.py
python/tests/: run_tests.py
tests/: run_tests.py
